Add sort_as values to contributors
Closes issue #11, to display contributor names in the order given rather than alphabetically.

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -10,18 +10,22 @@ contributor:
     last_name: Polkownik
     title: Paintings Conservator
     affiliation: Hamilton Kerr Institute, University of Cambridge
+    sort_as: "1"
   - first_name: Clare
     last_name: Richardson
     title: Senior Lecturer
     affiliation: Courtauld Institute of Art
+    sort_as: "2"
   - first_name: Maureen
     last_name: Cross
     title: Senior Lecturer
     affiliation: Courtauld Institute of Art
+    sort_as: "3"
   - first_name: Sarah
     last_name: Maisey
     title: Senior Remedial Conservator for Paintings
     affiliation: National Trust
+    sort_as: "4"
 abstract: Since the 1970s, the Courtauld Institute of Art (CIA) and Royal Museums Greenwich (RMG) (formerly the National Maritime Museum \[NMM\]) have been at the forefront of developments in lining methods, including research and practice using new adhesives including PVA, Beva 371, and synthetic wax-resin. The RMG worked closely with Stephen Rees Jones and Gerry Hedley from the Technology Department of the Courtauld to adopt their innovative methods, including lining using a vacuum hot table and vacuum envelopes, working together to develop the way paintings would be lined in the future. The present study reexamines archival materials related to the Greenwich Lining Conference and subsequent practical treatments undertaken in the CIA and RMG in the 1970s and 1980s. The authors explore the impact of the conference on contemporary practice, and a small group of case-study paintings is presented to evaluate the success and longevity of these treatments after forty to fifty years on display in museums or in storage.
 ---
 
