--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -5,14 +5,16 @@ short_title:
 layout: essay
 order: 110
 contributor:
-  - first_name: "Barbara"  
+  - first_name: "Barbara"
     last_name: "Lavorini"
     title: "Painting Conservator"
     affiliation: "Istituto Centrale per il Restauro, Ministry of Culture, Rome"
+    sort_as: "1"
   - first_name: "Luigi"
     last_name: "Orata"
     title: "Painting Conservator"
     affiliation: "private studio, Florence"
+    sort_as: "2"
 keywords: "large-size paintings, lining canvas, Plextol, vacuum, tub system"
 abstract: "This paper describes some customized methodologies developed to solve certain complex problems on a large-size painting on canvas by Alessandro Allori, which was restored from 2008 to 2009 at Laboratorio degli Angeli in Bologna, for the exhibition *Ferdinando I de’ Medici: Maiestate tantum* at the Medici Chapels in Florence. These methods are used to illustrate the authors’ own approach to complex structural problems."
 ---
