--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -10,14 +10,17 @@ contributor:
     last_name: "Hodkinson"
     title: "Emeritus Professor of Art Conservation"
     affiliation: "Queen’s University, Kingston, Canada"
+    sort_as: "1"
   - first_name: "Gianfranco"
     last_name: "Pocobene"
     title: "Principal and Chief Paintings Conservator"
     affiliation: "Gianfranco Pocobene Studio, Malden, Massachussets"
+    sort_as: "2"
   - first_name: "Corrine"
     last_name: "Long"
     title: "Associate Paintings Conservator"
     affiliation: "Gianfranco Pocobene Studio"
+    sort_as: "3"
 keywords: "Pierre Puvis de Chavannes, Boston Public Library, Beva 371b, aluminum honeycomb panel, lining failure, rigid support lining reversal"
 abstract: "During the 2016 conservation of Puvis de Chavannes’s *Philosophy* mural, one of nine canvases commissioned for the Boston Public Library and marouflaged to the wall in 1896, it was discovered that water infiltration had resulted in detachment of up to 80% of the canvas from the wall. After successful stabilization, facing, and removal from the wall, the painting was prepared with a fabric interleaf for marouflage onto a custom-built aluminum honeycomb panel for reinstallation into its niche. The failure of the panel, however, necessitated complete reversal of the marouflage and replacement of the panel constructed with a stronger epoxy adhesive. In this paper, the procedure to safely remove the faced, but stiff and brittle mural from the panel is described. The difficulty of carrying out the reversal led to the modification of the Beva 371 formula for the reattachment of the mural in order to facilitate future reversal, should the need arise."
 ---
