--- a/content/2-present-practice/13.md
+++ b/content/2-present-practice/13.md
@@ -9,10 +9,12 @@ contributor:
     last_name: "Brandt"
     title:
     affiliation: "Bayerisches Landesamt für Denkmalpflege"
+    sort_as: "1"
   - first_name: "Carina"
     last_name: "Volbracht"
     title: "Freelance Conservator, Munich, Germany"
     affiliation:
+    sort_as: "2"
 abstract: "Over the past decades, lining of paintings has become more and more an *ultima ratio* measure in conservation practice. In case of the painting *Das Jüngste Gericht* (*The* *Last Judgment*) by Engelbert Zimmermann, assessment showed that only a lining would provide a sustainable treatment. Due to a previous treatment, the support was extremely brittle and had several large tears. The aim of the conservation treatment was to stabilize the support while preserving the original stretching system. To regain stability of the support and readability of the depiction, the heavily distorted support was remodeled, the tears were partially closed, and the painting was lined using the mist-lining technique. Where the original canvas was no longer fixed to the stretcher, the lining canvas was introduced between the support and the stretcher. After lining, the original and the lining canvas were both fixed to the stretcher. In areas where the original stretching system was still intact the lining canvas was fixed a few millimetres inside the stretcher. The treatment has made the depiction readable again and improved the overall impression of the painting without neglecting its history."
 ---
 
