--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -9,14 +9,17 @@ contributor:
     last_name: Seymour
     title: Head of Education
     affiliation: Stichting Restauratie Atelier Limburg (SRAL), Maastricht, The Netherlands
+    sort_as: "1"
   - first_name: "Joanna"
     last_name: "Strombek"
     title: "Painting Conservator"
     affiliation: "Stichting Restauratie Atelier Limburg (SRAL), Maastricht, The Netherlands"
+    sort_as: "2"
   - first_name: "Jos"
     last_name: "van Och"
     title: "Senior Painting Conservator (retired)"
     affiliation: "Stichting Restauratie Atelier Limburg (SRAL), Maastricht, The Netherlands"
+    sort_as: "3"
 keywords: "mist lining, acrylic adhesive, minimally invasive, cold-lining, structural treatment, low-cost, nap-bond"
 abstract: "Mist lining was developed by Jos van Och at the Stichting Restauratie Atelier Limburg (SRAL) in Maastricht, The Netherlands, in the 1990s. It has since been used successfully to line numerous paintings, large and small, of different ages, conditions, and painting techniques. Pretreatments are used to solve distinct problems, leaving the action of lining solely to providing additional support. The mist-lining system avoids the use of heat, moisture, and high pressure and thus respects the integrity of the original structure and texture. Mist lining provides an alternative, low-cost system to traditional or other modern lining techniques. Careful selection of lining support, the manner in which the lining adhesive is applied, and the means to set the bond differentiates this technique. The acrylic adhesive creates a “bridge” between the two canvases without impregnation. Choosing the right solvent for activation allows the acrylic adhesive to bond well to a wide variety of previously treated canvases, including wax-resin lined paintings. The bond has good shear resistance, though its peel force is lower. Delining of previously mist-lined canvases is therefore facilitated, allowing mist-lined canvases to be delined successfully, even over time."
 ---
