--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -9,18 +9,22 @@ contributor:
     last_name: "Bräunig"
     title:
     affiliation: "Old National Gallery, Berlin, Germany"
+    sort_as: "1"
   - first_name: "Anna"
     last_name: "von Reden"
     title: "Professor"
     affiliation: "Stuttgart State Academy of Art and Design, Germany"
+    sort_as: "2"
   - first_name: "Dirk A."
     last_name: "Lichtblau"
     title:
     affiliation: "Lichtblau e.K., Dresden, Germany"
+    sort_as: "3"
   - first_name: "Christoph"
     last_name: "Herm"
     title: "Professor"
     affiliation: "Dresden University of Fine Arts, Germany"
+    sort_as: "4"
 abstract: "This study presents a novel technique to determine the tensile strength of single flax yarn of canvas, using zero-span strength analysis. The technique was applied to both artificially aged fabric and naturally aged canvas from historical artworks, yielding reproducible and representative results. Subsequently, the degree of polymerization of the cellulose was determined by capillary viscometry. A linear correlation could be shown between the degree of cellulose polymerization obtained from capillary viscometry and the tensile strength obtained from zero-span tensile strength measurements. These results demonstrate the value of this technique, which is more straightforward than capillary viscometry and requires significantly smaller samples. This approach offers great potential for determining the mechanical properties of an original canvas and for supporting the decision-making process about conservation treatments."
 ---
 
