--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -10,18 +10,22 @@ contributor:
     last_name: "Calvo"
     title: "Conservation Professor, Faculty of Fine Arts"
     affiliation: "Complutense University of Madrid"
+    sort_as: "1"
   - first_name: "Ana"
     last_name: "Macarrón"
     title: "Conservation Professor, Faculty of Fine Art (retired)"
     affiliation: "Complutense University of Madrid"
+    sort_as: "2"
   - first_name: "Rita"
     last_name: "Gil"
     title: "Conservator"
     affiliation: "National Museum of Natural Science (MNCN-CSIC) and in private practice"
+    sort_as: "3"
   - first_name: "Julia"
     last_name: "Betancor"
     title: "Associate Director, Conservation and Research"
     affiliation: "SOLO Collection of Contemporary Art"
+    sort_as: "4"
 keywords: "lining, gacha, glue-paste, adhesive, documentation, experimentation"
 abstract: "A research project was carried out between 2011 and 2015 at the Complutense University of Madrid, the aim of which was to suggest improvements to guarantee future conservation of canvases lined with a glue-paste adhesive called *gacha*. We started with three objectives: documenting the origin of recipes and the different methods used for this treatment in Spain and Europe, as there is still little knowledge about this kind of lining; choosing case studies; and finally, carrying out a series of experimental tests to evaluate the performance of the basic materials in the recipes and of some variants in the textiles often used as lining supports."
 ---
