--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -9,14 +9,17 @@ contributor:
     last_name: "Daly Hartin"
     title: "Senior Conservator (retired), Fine Arts"
     affiliation: "Canadian Conservation Institute"
+    sort_as: "1"
   - first_name: "Stefan W."
     last_name: "Michalski"
     title: "Senior Conservation Scientist (retired)"
     affiliation: "Canadian Conservation Institute"
+    sort_as: "2"
   - first_name: "Eric"
     last_name: "Hagan"
     title: "Senior Conservation Scientist"
     affiliation: "Canadian Conservation Institute"
+    sort_as: "3"
 abstract: "Lining treatments and ideas about these treatments are reviewed, with a focus on the innovative period following the 1975 Greenwich conference. Three decades of research at the Canadian Conservation Institute on the mechanics of paintings and the mechanics of linings is summarized. The relevance of peel testing and the results of recent tests of the bond strength of Beva 371b film by a colleague at the Centre de Conservation du Québec are also included. The text focuses on the perspective of the conservator: lessons learned from theory and data, from direct observation of samples, and from real structural treatments, as well as perspectives gained regarding the role for preventive conservation strategies."
 ---
 
