--- a/content/4-case-studies/23.md
+++ b/content/4-case-studies/23.md
@@ -9,10 +9,12 @@ contributor:
     last_name: "Tarleton"
     title: "Principal"
     affiliation: "ConText Inc."
+    sort_as: "1"
   - first_name: "Charlotte"
     last_name: "Hamlin"
     title: "Principal"
     affiliation: "ConText Inc."
+    sort_as: "2"
 keywords:
 abstract: "*The Grand Panorama* *of a Whaling Voyage ’Round the World* is an 8 1/2 x 1,300 foot painting worked in distemper on cotton muslin that is owned by the New Bedford Whaling Museum. The primary objective of this conservation project was to stabilize the panorama to enable its safe handling and storage and static vertical display. The conservators developed protocols for physically supportive, minimally intrusive, and visually nondisruptive stabilization treatments; a means of documenting the conservation work; and a storage system for the conserved panorama. Treatment included removal of adhered Mylar, retention of select previous repairs, ordering of previously disrupted panels, local stabilization utilizing custom-dyed underlays, and when needed, bobbinet overlays."
 ---
