--- a/content/4-case-studies/24.md
+++ b/content/4-case-studies/24.md
@@ -10,18 +10,22 @@ contributor:
     last_name: "Schwarz"
     title: "Senior Associate Conservator of Paintings"
     affiliation: "Yale University Art Gallery"
+    sort_as: "1"
   - first_name: "Kelsey"
     last_name: "Wingel"
     title: "Assistant Conservator of Paintings"
     affiliation: "Yale University Art Gallery"
+    sort_as: "2"
   - first_name: "Julianna"
     last_name: "Ly"
     title: "Assistant Conservator of Paintings"
     affiliation: "Cleveland Museum of Art"
+    sort_as: "3"
   - first_name: "Ian"
     last_name: "McClure"
     title: "Chief Conservator (retired)"
     affiliation: "Yale University Art Gallery"
+    sort_as: "4"
 keywords:
 abstract: "In preparation for an upcoming exhibition featuring preparatory works by Edwin Austin Abbey (1852–1911) for major mural commissions, conservators at the Yale University Art Gallery treated a 12-foot diameter study for Abbey’s ceiling mural *The Passage of the Hours* (1904–11). The unvarnished, matte surface of *The Hours* is well preserved, but improper storage in the early twentieth century caused structural damages to the canvas, including undulating deformations and sharp creases. This case study describes a series of innovative solutions to challenges presented by the structural treatment of this painting, which will travel internationally. A 14-foot round aluminum working strainer was fabricated to help conservators resolve canvas deformations under tension. The painting was loomed temporarily onto this strainer using Velcro attachments. Once on the working strainer, structural damages and deformations were addressed vertically, providing access to both the recto and verso with minimal handling. The painting has been reunited with its original stretcher, itself a collapsible design that disassembles into two loose-lined hemispheres for travel. A segmented edge lining, again using Velcro attachments, was designed to enable the painting to be efficiently and gently stretched at each venue, while adding little additional bulk to the fold-over edges."
 ---
