--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -10,10 +10,12 @@ contributor:
     last_name: "Garza Villegas"
     title: "Head Conservator"
     affiliation: "Archdiocese of Tlalnepantla and Mexico"
+    sort_as: "1"
   - first_name: "Naitzá"
     last_name: "Santiago Gómez"
     title: "Conservator"
     affiliation: "Garza & Santiago Restauración"
+    sort_as: "2"
 keywords: "art, easel painting, canvas, conservation, New Spain"
 abstract: "The church of Saint Francis of Assisi Atizapan, located in the Mexican state of Mexico, houses a series of mid-eighteenth-century easel paintings made in the Viceroyalty of New Spain representing eleven apostles, Saint Paul, Christ, and the Virgin Mary. The paintings all correspond with each other aesthetically and technically. The paintings were restored during a six-month period in 2018, during which time it was possible to study them in depth. It was noteworthy to be able to analyze this pictorial set from a single anonymous author who was in tune with artists such as Miguel Cabrera, Francisco Vallejo, and Patricio Morlete, among others. The paintings are exceptional documents that give us very specific information on the technical and material challenges faced by an artist from New Spain in the middle of the eighteenth century."
 ---
