--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -10,42 +10,52 @@ contributor:
     last_name: "Bridarolli"
     title:
     affiliation: "Eastman Dental Institute, University College London"
+    sort_as: "01"
   - first_name: "Marianne"
     last_name: "Odlyha"
     title:
     affiliation: "Department of Biological Sciences, Birkbeck College, London"
+    sort_as: "02"
   - first_name: "Oleksandr"
     last_name: "Nechyporchuk"
     title:
     affiliation: "Department of Chemistry and Chemical Engineering, Chalmers University of Technology, Gothenburg, Sweden"
+    sort_as: "03"
   - first_name: "Krzysztof"
     last_name: "Kolman"
     title:
     affiliation: "Department of Chemistry and Chemical Engineering, Chalmers University of Technology, Gothenburg, Sweden"
+    sort_as: "04"
   - first_name: "Romain"
     last_name: "Bordes"
     title:
     affiliation: "Department of Chemistry and Chemical Engineering, Chalmers University of Technology, Gothenburg, Sweden"
+    sort_as: "05"
   - first_name: "Krister"
     last_name: "Holmberg"
     title:
     affiliation: "Department of Chemistry and Chemical Engineering, Chalmers University of Technology, Gothenburg, Sweden"
+    sort_as: "06"
   - first_name: "Gema"
     last_name: "Campo-Francés"
     title:
     affiliation: "Facultat Belles Arts, University of Barcelona"
+    sort_as: "07"
   - first_name: "Cristina"
     last_name: "Ruiz-Recasens"
     title:
     affiliation: "Facultat Belles Arts, University of Barcelona"
+    sort_as: "08"
   - first_name: "Manfred"
     last_name: "Anders"
     title:
     affiliation: "Zentrum fur Bucherhaltung, Leipzig, Germany"
+    sort_as: "09"
   - first_name: "Aurélia"
     last_name: "Chevalier"
     title:
     affiliation: "Aurelia Chevalier Atelier, Paris"
+    sort_as: "10"
   - first_name: "Giovanna"
     last_name: "Poggi"
     title:
@@ -54,10 +64,12 @@ contributor:
     last_name: "Baglioni"
     title:
     affiliation: "Department of Chemistry and CSGI, University of Florence"
+    sort_as: "11"
   - first_name: "Laurent"
     last_name: "Bozec"
     title:
     affiliation: "Eastman Dental Institute, University College London; Faculty of Dentistry, University of Toronto"
+    sort_as: "12"
 keywords:
 abstract: "In recent years, nanocellulose-based products and multilayered nanoparticles have emerged as new solutions for the consolidation of canvas-supported paintings. This paper focuses on these recently developed treatments as applied in the framework of the European Commission’s Horizon 2020 project Nanorestart. It provides a summary of their properties, advantages, and disadvantages in terms of ease of application, reinforcement provided, visual appearance, and stability. Physicochemical and mechanical results of the tests performed in the past couple of years are presented. The treatments can be divided into three categories—pure nanocellulose, nanocomposite, and multilayered nanoparticles—characterized by different compositions, degrees of penetration, and modes of consolidation. This project has used a systematic multiscale approach to review the potential of new consolidants for the structural consolidation of canvas-supported paintings. An overall account of the benefits of each consolidation approach are presented on the basis of previously published work. It is anticipated that these treatments will offer an alternative to lining and consolidants currently in use and prevent the recurrence of the issues highlighted in the Greenwich conference."
 ---
