--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -6,18 +6,21 @@ short_title: "Reliable Adhesives in New Shape"
 layout: essay
 order: 280
 contributor:
-  - first_name: "Mona"  
+  - first_name: "Mona"
     last_name: "Konietzny"
     title:
     affiliation: "Dresden University of Fine Arts, Germany"
+    sort_as: "1"
   - first_name: "Karolina"
     last_name: "Soppa"
     title: "Professor"
     affiliation: "Bern University of Applied Sciences, Switzerland"
+    sort_as: "2"
   - first_name: "Ursula"
     last_name: "Haller"
     title: "Professor"
     affiliation: "Dresden University of Fine Arts, Germany"
+    sort_as: "3"
 keywords:
 abstract: "Adhesive meshes are thin, flexible microstructure nets made from pure methyl cellulose or sturgeon glue—and in the future possibly poly(isobutyl methacrylate). Whereas ready-made glue mixtures like acrylic dispersions or heat-seal adhesives may contain changeable and uncertain ingredients, adhesive meshes consist of homogenous, constant materials with convincing aging resistance. The bonding procedure is carried out by positioning the mesh in its dry state, activating it with a controlled supply of moisture or solvents, and applying pressure to generate the adhesion. Thus, instead of penetrating the canvas, the adhesive remains discretely in the joint, assuring a regular, permeable adhesive pattern. The method’s advantages further include adjustability of the adhesive strength and increased reversibility. Case studies implementing water-soluble adhesive meshes illustrate the range of application techniques and bonding properties, depending on the choice of adhesive."
 ---
