--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -10,18 +10,22 @@ contributor:
     last_name: "Flock"
     title: "Scientific Associate, Conservation of Paintings, Sculpture and Modern Art"
     affiliation: "Cologne Institute of Conservation Sciences (CICS), Technische Hochschule Köln, Cologne, Germany"
+    sort_as: "1"
   - first_name: "Petra"
     last_name: "Demuth"
     title: "Technical Lecturer, Conservation of Paintings, Sculpture and Modern Art"
     affiliation: "Cologne Institute of Conservation Sciences (CICS), Technische Hochschule Köln, Cologne, Germany"
+    sort_as: "2"
   - first_name: "Stefan"
     last_name: "Diebels"
     title: "Head, Chair of Applied Mechanics (LTM)"
     affiliation: "Saarland University, Saarbrücken, Germany"
+    sort_as: "3"
   - first_name: "Elisabeth"
     last_name: "Jägers"
     title: "Head, Department of Natural Sciences (retired)"
     affiliation: "Cologne Institute of Conservation Sciences (CICS), Technische Hochschule Köln, Cologne, Germany"
+    sort_as: "4"
 keywords: "thread-by-thread tear mending, single thread bonding technique, adhesive application"
 abstract: "Tears and cuts in textile painting supports are often closed with thread-by-thread mending, to reconstruct the mechanical properties and visual appearance. Selected results of tests on adhesives for single-thread bonding in cellulosic fabrics are summarized. The data presented is based on uniaxial tensile tests of bonded canvas strips. The investigation also covers different bonding techniques. Under the wide range of adhesives tested, the most promising types are shown, taking the requirement profile into account. The classic recipe of Winfried Heiber, a mixture of sturgeon glue and wheat-starch paste, as well as dispersions based on PVA and EVA were evaluated. In particular, the reinforcement with cellulose fibers is addressed: investigations about the influence of fiber length of selected commercial Arbocel products, in a mixture with sturgeon glue solution, were carried out. In addition, a new heating device for a controlled application of adhesives based on animal glues is presented."
 ---
