--- a/content/6-interventions/31.md
+++ b/content/6-interventions/31.md
@@ -10,26 +10,32 @@ contributor:
     last_name: "Mulvihill"
     title: "Conservator and Co-founder"
     affiliation: "Current Art Conservation"
+    sort_as: "1"
   - first_name: "Sandra"
     last_name: "Amann"
     title: "Head Painting Conservator"
     affiliation: "Amann + Estabrook Conservation Associates"
+    sort_as: "2"
   - first_name: "Elizabeth"
     last_name: "Estabrook"
     title: "Head Painting Conservator"
     affiliation: "Amann + Estabrook Conservation Associates"
+    sort_as: "3"
   - first_name: "Megan"
     last_name: "Berkey"
     title: "Painting Conservator"
     affiliation: "Amann + Estabrook Conservation Associates"
+    sort_as: "4"
   - first_name: "Sayaka"
     last_name: "Rozsa"
     title: "Painting Conservator"
     affiliation: "Amann + Estabrook Conservation Associates"
+    sort_as: "5"
   - first_name: "Gail"
     last_name: "Mitchell"
     title: "Painting Conservator"
     affiliation: "Amann + Estabrook Conservation Associates"
+    sort_as: "6"
 keywords:
 abstract: "Structural damage to a canvas, such as tears, presents unique problems when considering and conducting conservation treatments and can be compounded when working in private conservation, as a consistent and stable environment for the exhibition, storage, and travel of a painting is not assured. When Heiber’s thread-by-thread tear-mending technique is selected as the preferred treatment method, further treatment steps, such as reinforcements to the mend, are often necessary to maintain integrity and planarity and ensure a successful outcome. This paper argues for the necessity for reinforcements to be added to tears repaired with Heiber’s technique. Four case studies of tears encountered in a private painting conservation setting are presented. These case studies present examples in which structural reinforcements of tear repairs were implemented, informed by the canvas’s material properties; the type of damage to the canvas threads; and the size, direction, and location of the tear. The reinforcements discussed focus on the incorporation of Gore-Tex sutures into the weave matrix."
 ---
