--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -9,14 +9,17 @@ contributor:
     last_name: "Martos-Levif"
     title: "Scientist and Painting Conservator, in charge of the restoration paintings studios"
     affiliation: "Centre de Recherche et de Restauration des Musées de France"
+    sort_as: "1"
   - first_name: "Ludovic"
     last_name: "Roudet"
     title: "Private Conservator"
     affiliation:
+    sort_as: "2"
   - first_name: "Matthieu"
     last_name: "Gilles"
     title: "Head of Painting Section"
     affiliation: "Centre de Recherche et de Restauration des Musées de France"
+    sort_as: "3"
 keywords:
 abstract: "In 2016, after the flooding of the temporary storage area of the Musée Girodet of Montargis, sixty-nine paintings were brought to the Centre de Recherche et de restauration des Musées de France (C2RMF) for restoration. The works showed various structural and aesthetic alterations due to their prolonged immersion. The aims of the interventions were to reestablish the cohesion of the multilayer system to ensure its conservation over time and to improve the presentation of the paintings. The restoration campaign of this corpus allowed the authors to study the behavior of works according to their age, including old alterations and earlier restorations, and notably the presence of old backing supports. Different types of structural restoration treatment (modern or traditional practices) were then chosen depending on the sensitivity and state of conservation of each painting. The methodological approach of the interventions is presented through a case study of a work presenting a particular restoration problem, the *Sacrifice of Abraham,* by a follower of Maertens De Vos."
 ---
