--- a/content/6-interventions/36.md
+++ b/content/6-interventions/36.md
@@ -10,10 +10,12 @@ contributor:
     last_name: "Dwivedi"
     title: "Project Associate, Conservation"
     affiliation: "Indira Gandhi National Centre for the Arts, New Delhi"
+    sort_as: "1"
   - first_name: "Achal"
     last_name: "Pandya"
     title: "Head of Conservation"
     affiliation: "Indira Gandhi National Centre for the Arts, New Delhi"
+    sort_as: "2"
 keywords:
 abstract: "Remedial conservation aims to arrest the ongoing deterioration process of an art object, but it can create serious problems if it is not executed properly. This was noticed during a conservation project undertaken in a government museum in India’s state Rajasthan. This paper endeavors discuss the issue and describe the challenges faced during the conservation work on the paintings."
 ---
