--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -10,10 +10,12 @@ contributor:
     last_name: "Olsson"
     title: "Paintings Conservator and Precision Mat Co-Founder"
     affiliation: "Nina Olsson Art Conservation and Precision Mat, LLC, Portland, Oregon"
+    sort_as: "1"
   - first_name: "Tomas"
     last_name: "Markevičius"
     title: "Paintings Conservator, Doctoral Researcher, and Precision Mat Co-Founder"
     affiliation: "University of Amsterdam and Precision Mat, LLC"
+    sort_as: "2"
 keywords:
 abstract: "The paper discusses novel approaches and targeted structural treatments of paintings on canvas made possible by a precision temperature management methodology for mild heat transfer based on flexible mats. Flexible silicone mats and carbon nanotube–enabled IMAT prototypes and the associated mobile MAT and IMAT electronic temperature management consoles were designed specifically for the field to offer accuracy and mobility for new smart approaches to conserving paintings on canvas, setting new standards in precision, steadiness, uniformity, and control in mild heat transfer. The varied dimensions of mats and their thin, flexible profile, combined with accuracy in the low-energy range, allow conservators to formulate novel “low and slow” targeted treatments that exploit the effects of well-controlled, precision low-energy heat transfer over time on previously treated/lined paintings. Even more critically for unlined and extremely fragile modern or contemporary works, this methodology allows them to be treated without removing them from their stretchers or exposing them to unnecessary stress and the uncontrolled high-heat-transfer risks of the past."
 ---
