--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -9,10 +9,12 @@ contributor:
     last_name: "Dijkema"
     title: "Assistant Paintings Conservator"
     affiliation: "The Menil Collection"
+    sort_as: "1"
   - first_name: "Bradford"
     last_name: "Epley"
     title: "Chief Conservator"
     affiliation: "The Menil Collection"
+    sort_as: "2"
 keywords:
 abstract: "In 2018, the Conservation Department of the Menil Collection performed a novel wax-extraction treatment utilizing Evolon CR on *Pitcher, Candlestick, and Black Fish* (1943) by Georges Braque. The treatment was preceded by extensive wax-resin extraction trials; multiple methods of extraction were tested, focusing on the variable contributions of heat, suction, solvent selection, and the capillary action of an Evolon CR substrate. Based upon optimized parameters determined in the preliminary trials, the wax-resin extraction treatment on the painting was performed on a suction table, utilizing xylenes-saturated Evolon CR against the back of the canvas, ShellSol OMS–saturated Evolon CR against the face, and two cycles of suction and heat. Visually, the canvas regained weave distinction and a variety of surface that is inherent to the way that paint conforms to fabric. Spectrophotometry readings taken before and after wax extraction show a perceivable lightening of the ground. After treatment, the weight of the canvas had decreased by 14%."
 ---
