--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -9,10 +9,12 @@ contributor:
     last_name: "Hough"
     title: "Head of Paintings Conservation"
     affiliation: "Library and Archives Canada"
+    sort_as: "1"
   - first_name: "Stefan W."
     last_name: "Michalski"
     title: "Heritage Conservation Scientist (retired)"
     affiliation: "Canadian Conservation Institute"
+    sort_as: "2"
 keywords:
 abstract: "Single cracks in contemporary paintings on canvas can be disfiguring due to cupping. In 1999, the authors published a study of fourteen different methods for local treatment of such cracks, applied to slack paintings ([[Hough and Michalski 1999]]). Model paintings were created to simulate contemporary paintings of oil paint on acrylic ground on cotton duck fabric. Nine cracks, 15 cm (6 in.) long, were created in each of nine paintings. Profiles of the treated cracks were monitored over a period ranging from five minutes to seventy days. Only three of the treatments gave good results at seventy days. The results were consistent with the known viscoelastic properties of the materials used. A year later, three paintings were keyed out in order to study the taut condition, where cupping is driven by stress alignment rather than curl, and to study the tendency of the repairs to surface. In 2018–2019, the samples were reexamined. Surfacing had become pronounced in many, but not all, of the samples that had been keyed out: one treatment still looked good. In this paper, the mechanisms causing cupping and surfacing are modeled and the predictions compared to the experimental results."
 ---
