--- a/content/8-posters/41.md
+++ b/content/8-posters/41.md
@@ -10,10 +10,12 @@ contributor:
     last_name: "Bradley"
     title: "Associate Paintings Conservator"
     affiliation: "Brooklyn Museum"
+    sort_as: "1"
   - first_name: "Josh"
     last_name: "Summer"
     title: "Louise B. and J. Harwood Cochrane Assistant Conservator of Paintings"
     affiliation: "Virginia Museum of Fine Arts"
+    sort_as: "2"
 keywords:
 abstract: "This short article compiles preliminary findings from an ongoing survey of wax-resin lining treatments performed at Brooklyn Museum (BkM) from 1936 through 1985. BkM’s Conservation Department was established in 1934 with the hire of Sheldon Keck and is among the oldest in the United States. BkM holds both the paintings and the associated conservation records for a wide range of canvases treated by Keck, his wife Caroline, and their protégés; researching this collection has the potential to reveal much about the broader twentieth-century American lining movement. It is estimated that 20%–25% of the canvas paintings in BkM’s collection have been wax-resin lined. Lining trends identified within the collection, reasons for lining, and adhesive recipes used at BkM are discussed. Initial survey results challenged some of the authors' preconceptions about historic lining practices at the museum. At the time of publication, nearly half of the conservation files had been evaluated."
 ---
