--- a/content/8-posters/44.md
+++ b/content/8-posters/44.md
@@ -9,14 +9,17 @@ contributor:
     last_name: "Court"
     title: "Chief Conservator of Paintings (retired)"
     affiliation: "Balboa Art Conservation Center"
+    sort_as: "1"
   - first_name: "Alexis"
     last_name: "Miller"
     title: "Head Conservator of Paintings"
     affiliation: "Balboa Art Conservation Center"
+    sort_as: "2"
   - first_name: "Bianca"
     last_name: "García"
     title: "Assistant Conservator of Paintings"
     affiliation: "Balboa Art Conservation Center"
+    sort_as: "3"
 keywords:
 abstract: "This poster describes the evolution and current technique of the procedure employed in remounting lined paintings at the Balboa Art Conservation Center (BACC). BACC has been performing structural treatments, including the lining of canvases, since its establishment in 1975. As lining practices have changed and evolved over the years, so have the approaches to reattachment and retensioning of paintings on stretchers at BACC. Starting with the technique of wax lining and the attachment of lining canvases and original tacking edges to the stretcher using adhesive all around the edges, the center has moved to a system of reattaching lined canvases to their stretchers using Beva since the early 1980s. The adhesive provides more even, constant tension all around the edges, as opposed to the individual points of stress that occur when using the traditional method of restretching and attachment with tacks or staples only. The BACC method also minimizes any stress on the original canvas by attaching and tensioning the lining canvas before the original tacking margins are gently folded back and secured into place."
 ---
