--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -9,14 +9,17 @@ contributor:
     last_name: "Voronina"
     title: "Conservator"
     affiliation: "Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration, Moscow"
+    sort_as: "1"
   - first_name: "Ekaterina"
     last_name: "Morozova"
     title: "Conservation Scientist"
     affiliation: "Laboratory of Physical and Chemical Research, State Research Institute for Restoration, Moscow"
+    sort_as: "2"
   - first_name: "Maria"
     last_name: "Churakova"
     title: "Department Head"
     affiliation: "Scientific Conservation of Oil Paintings, State Research Institute for Restoration, Moscow"
+    sort_as: "3"
 keywords:
 abstract: "The paper presents the results of the case study in which a solvent paste based on fumed silica (AEROSIL) was applied to remove beeswax from a canvas structure. The restored object was a portrait painted by Russian artist Fyodor Rokotov. The painting had a large tear that had been previously fixed with beeswax, and ground losses had also been filled with beeswax and had oil overpaints. The removal of beeswax residues using AEROSIL paste enabled thread-by-thread tear mending using polyvinyl butyral adhesive, as well as the use of water-based glue to consolidate the paint layer. Lining the original canvas was avoided as a result of these treatments."
 ---
