--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -10,22 +10,27 @@ contributor:
     last_name: "Ly"
     title: "Assistant Conservator of Paintings"
     affiliation: "The Cleveland Museum of Art"
+    sort_as: "1"
   - first_name: "Chun"
     last_name: "Liu"
     title: "Scientist"
     affiliation: "The Janssen Pharmaceutical Companies of Johnson & Johnson"
+    sort_as: "2"
   - first_name: "Jing"
     last_name: "Qu"
     title: "Research Scientist"
     affiliation: "University of Delaware Advanced Materials Characterization Laboratory"
+    sort_as: "3"
   - first_name: "Gerald"
     last_name: "Poirier"
     title: "Director"
     affiliation: "University of Delaware Advanced Materials Characterization Laboratory"
+    sort_as: "4"
   - first_name: "Matthew"
     last_name: "Cushman"
     title:
     affiliation: "Winterthur/University of Delaware Program in Art Conservation"
+    sort_as: "5"
 keywords: "evolon, evolon CR, poultice, wax-resin, lining, adhesive, tissue"
 abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide microfilaments, is currently used in conservation for the purpose of reducing and removing overpaint and varnish from paintings. This study explores its use as a poulticing agent for the reduction of wax from wax-resin lining treatments. Experiments involving different methods of using the tissue, as well as analyses of the tissue after use employing various analytical methods indicate that it is most effective when used as a single sheet of solvent-wetted tissue. While the tissue can be used more than once, its ability to poultice wax-resin significantly decreases after its first use. Finally, the most important role in influencing the efficacy of poulticing is the solvent choice."
 ---
