--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -9,14 +9,17 @@ contributor:
     last_name: "Kunikata"
     title: "PhD Candidate, Conservation and Restoration"
     affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+    sort_as: "1"
   - first_name: "Takayasu"
     last_name: "Kijima"
     title: "Emeritus Professor, Conservation and Restoration"
     affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+    sort_as: "2"
   - first_name: "Masahiko"
     last_name: "Tsukada"
     title: "Professor, Conservation Science"
     affiliation: "Department of Conservation, Graduate School of Fine Arts, Tokyo University of the Arts"
+    sort_as: "3"
 keywords:
 abstract: "Wax-resin linings were introduced into Japan at the end of 1960s, and after that they were applied to many oil paintings. However, due to their disadvantages, they fell out of use in Japan around 2000. Now, some linings applied decades ago need further treatments, and we needed to understand their material properties to appropriately conserve them. This research began with compiling the disseminations of wax resin for lining into Japan, which derived the most common recipe used at that time. Based on that, various recipes of wax resin were reconstructed and removal experiments performed. It was revealed that the formulation, amount, and types of resin used in wax resins influenced how the mixtures could be removed. The fact that not all components of wax resin are always removed and, moreover, not uniformly removed, calls for great care in the future treatments of oil paintings lined with wax resin in the past."
 ---
