--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -9,42 +9,52 @@ contributor:
     last_name: "Fuster-López"
     title:
     affiliation: "Instituto Universitario de Restauración del Patrimonio, Universitat Politècnica de València"
+    sort_as: "01"
   - first_name: "Cecil Krarup"
     last_name: "Andersen"
     title:
     affiliation: "Royal Danish Academy of Fine Arts, Schools of Architecture, Design and Conservation, School of Conservation, Copenhagen"
+    sort_as: "02"
   - first_name: "Nicolas"
     last_name: "Bouillon"
     title:
     affiliation: "Centre Interdisciplinaire de Conservation et de Restauration du Patrimoine, Marseille"
+    sort_as: "03"
   - first_name: "Fabien"
     last_name: "Fohrer"
     title:
     affiliation: "Centre Interdisciplinaire de Conservation et de Restauration du Patrimoine, Marseille"
+    sort_as: "04"
   - first_name: "Matteo"
     last_name: "Rossi-Doria"
     title:
     affiliation: "Conservazione Beni Culturali"
+    sort_as: "05"
   - first_name: "Mikkel"
     last_name: "Scharff"
     title: "Professor"
     affiliation: "Royal Danish Academy of Fine Arts, Schools of Architecture, Design and Conservation, School of Conservation, Copenhagen"
+    sort_as: "06"
   - first_name: "Kate"
     last_name: "Seymour"
     title: "Professor"
     affiliation: "Stichting Restauratie Atelier, Maastricht"
+    sort_as: "07"
   - first_name: "Ángel"
     last_name: "Vicente-Escuder"
     title: "Professor"
     affiliation: "Instituto de Tecnología de los Materiales, Universidad Politécnica de Valencia"
+    sort_as: "08"
   - first_name: "Dolores Julia"
     last_name: "Yusà-Marco"
     title:
     affiliation: "Instituto Universitario de Restauración del Patrimonio, Universitat Politècnica de València"
+    sort_as: "09"
   - first_name: "Sofía"
     last_name: "Vicente-Palomino"
     title:
     affiliation: "Instituto Universitario de Restauración del Patrimonio, Universitat Politècnica de València"
+    sort_as: "10"
 keywords:
 abstract: "Glue-paste has been the most widely used lining adhesive in the Southern European tradition. This research was devoted to studying the mechanical performance and failure mechanisms of mock-up linings made with selected simplified glue-paste recipes when subjected to changing environments, as a function of the materials and application techniques used. For this purpose, different qualities of wheat and rye flours were tested, mixed with selected animal glues in different proportions. The elimination of additives from the recipes studied provided coherence and clearer evaluation of results. Two representative lining canvases were selected, and linings were carried out following the Italian tradition. The lined mock-ups were subjected to relative humidity cycles, and the impact on the mechanical, chemical, and biological properties of the lined paintings was reported, with special attention given to the effects of the degree of milling, the cereal protein content of the flours, and the weave density of the lining fabrics."
 ---
