--- a/content/8-posters/52.md
+++ b/content/8-posters/52.md
@@ -10,14 +10,17 @@ contributor:
     last_name: "Brooks"
     title: "Paintings Conservator"
     affiliation: "St. Louis Art Museum"
+    sort_as: "1"
   - first_name: "Corrine"
     last_name: "Long"
     title: "Assistant Paintings Conservator"
     affiliation: "Gianfranco Pocobene Studio"
+    sort_as: "2"
   - first_name: "Gianfranco"
     last_name: "Pocobene"
     title: "Chief Paintings and Research Conservator"
     affiliation: "Isabella Stewart Gardner Museum, Boston"
+    sort_as: "3"
 keywords:
 abstract: "In preparation for a multivenue loan and the rigors of trans-Atlantic travel, Titian’s *Rape of Europa* underwent a structural treatment in 2018. Remarkably, the painting retains what appears to be a late-eighteenth-century glue-paste lining. While the painted surface was stable, it was observed that sections of the lining canvas had detached along the edges of the cropped original canvas support and that the painting was also extremely loose on its strainer. Although the notion of relining was considered, it was decided to preserve the old glue-paste lining. The strainer, dating from the time of the lining procedure, was in poor structural condition, exhibiting severe bowing of the cross members, extremely weak corner joints, and woodworm damage. As these condition problems precluded the original strainer’s reuse, a new modified stretcher system, incorporating lightweight, rigid panel inserts and a loose-lining fabric, was employed to support the painting."
 ---
