--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -9,26 +9,32 @@ contributor:
     last_name: "Barbosa"
     title: "Paintings Conservator"
     affiliation: "Freelance Paintings Conservator, Portugal"
+    sort_as: "1"
   - first_name: "Leonora"
     last_name: "Burton"
     title: "Paintings Conservator"
     affiliation: "Freelance Paintings Conservator, UK"
+    sort_as: "2"
   - first_name: "Kristin"
     last_name: "Rattke"
     title: "Paintings Conservator"
     affiliation: "Freelance Paintings Conservator, Germany"
+    sort_as: "3"
   - first_name: "Kate"
     last_name: "Seymour"
     title: "Head of Education"
     affiliation: "SRAL, Maastricht, The Netherlands"
+    sort_as: "4"
   - first_name: "Eva"
     last_name: "Tammekivi"
     title: "Paintings Conservator"
     affiliation: "Freelance Paintings Conservator, Estonia"
+    sort_as: "5"
   - first_name: "Jos"
     last_name: "van Och"
     title: "Senior Conservator (Retired)"
     affiliation: "SRAL, Maastricht, The Netherlands"
+    sort_as: "6"
 keywords: "cold-lining, re-lining, structural treatment, large-scale painting"
 abstract: "The treatment of five large-scale paintings by Dutch artist Aart Schouman (1710–1792) from the series The Menagerie van Prince Willem V is discussed. The paintings are part of the collection of Huis ten Bosch, The Hague. They were rediscovered in the 1970s and subsequently wax-resin lined. Display environments over 30 years caused structural deformations to develop. The current treatment consisted of the removal of this wax-resin lining, tear-mending, and the application of an innovative cold-lining support with an integrated glass-fiber interleaf."
 ---
