--- a/content/8-posters/55.md
+++ b/content/8-posters/55.md
@@ -9,10 +9,12 @@ contributor:
     last_name: "Dobrzańska"
     title:
     affiliation: "Jan Matejko Academy of Fine Arts, Kraków, Poland"
+    sort_as: "1"
   - first_name: "Magdalena"
     last_name: "Lentowicz"
     title:
     affiliation: "Jan Matejko Academy of Fine Arts"
+    sort_as: "2"
 keywords: "canvas painting, painting conservation, eighteenth-century art, Polish art"
 abstract: "This paper describes the conservation treatment performed on a large-scale eighteenth-century canvas painting from the collection of the Museum of the John Paul II Catholic University of Lublin, Poland. The conservation and accompanying research was executed at Jana Matejko Academy of Fine Arts in Kraków. The former altar painting, depicting the crucifixion based on the composition of Coup de Lance by Rubens, had been subjected to numerous unprofessional repair attempts, resulting in its extremely poor and fragile condition. The large scale of the object influenced the decisions made during the conservation process. The damages were fully addressed during an extended, multistep treatment, which included removal of the overpainting, repair of canvas tears, relining, and reconstruction of the incomplete composition. Additionally, research into the authorship of the painting, which was attributed to the Polish painter Jan Bogumił Plersch (1732–1817) was conducted in an attempt to verify the historical sources."
 ---
