--- a/content/8-posters/57.md
+++ b/content/8-posters/57.md
@@ -9,18 +9,22 @@ contributor:
     last_name: "Iurovetskaia"
     title: "Conservator"
     affiliation: "Department of Scientific Conservation of Oil Paintings, State Research Institute for Restoration (GOSNIIR), Moscow"
+    sort_as: "1"
   - first_name: "Anastasia"
     last_name: "Yurovetskaya"
     title: "Research Fellow"
     affiliation: "Department of Scientific Conservation of Oil Paintings, GOSNIIR"
+    sort_as: "2"
   - first_name: "Maria"
     last_name: "Churakova"
     title: "Head of Department"
     affiliation: "Department of Scientific Conservation of Oil Paintings, GOSNIIR"
+    sort_as: "3"
   - first_name: "Artyom"
     last_name: "Romanov"
     title: "Conservator"
     affiliation: "Department of Scientific Conservation of Oil Paintings, GOSNIIR"
+    sort_as: "4"
 keywords: "two-sided oil paintings, strip-lining, restretching canvases, tear-mending technique, stretchers"
 abstract: "In this paper, conservators from GOSNIIR offer several techniques for displaying and treating two-sided paintings without giving preference to one as the main side. They have adapted a method of tear mending for the process of strip-lining. The edging margins of the painting are connected to the new canvas strips thread-by-thread with polyvinyl butyral in isopropanol. Its strong, elastic film allows application of gentle pressure to stretch the painting on a special frame. The joint can be strengthened by stitching. For restretching, a manually controlled system is offered consisting of two frames: an inner extensile one, to which the painting is attached, and an outer frame with rigidly fixed edges with screws that move forward and backward toward the bushings and change the tension by pulling and pushing the inner frame. The techniques are discussed using case studies as examples."
 
