--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -6,14 +6,16 @@ short_title: "Magnetic Systems as an Alternative to Traditional Methods"
 layout: essay
 order: 590
 contributor:
-  - first_name: "Emanuel"  
+  - first_name: "Emanuel"
     last_name: "Sterp Moga"
     title: "PhD Researcher"
     affiliation: "Department of Painting and Conservation-Restoration, Faculty of Fine Arts, Complutense University of Madrid, Spain"
+    sort_as: "1"
   - first_name: "Alicia"
     last_name: "Sánchez Ortiz"
     title: "Professor"
     affiliation: "Department of Painting and Conservation-Restoration, Faculty of Fine Arts, Complutense University of Madrid, Spain"
+    sort_as: "2"
 keywords: "minimal intervention, easel painting, canvas painted support, conservation/restoration, neodymium magnets, auxiliary frame"
 abstract: "This research shows the application of neodymium magnets in the conservation/restoration of paint on canvas, establishing minimal intervention as the main criterion. In an innovative way and with the aim of respecting the authenticity of the original, a new tool has been designed consisting of an internal auxiliary frame equipped with a magnetic system (IAFMS). Its use contributes to facilitating and improving the operation during some procedures, such as thread-by-thread sutures, textile intarsia, and thread bridges reinforcement."
 ---
