--- a/content/8-posters/61.md
+++ b/content/8-posters/61.md
@@ -10,10 +10,12 @@ contributor:
     last_name: "Karmakar"
     title: "Restoration Assistant"
     affiliation: "Victoria Memorial Hall, Kolkata"
+    sort_as: "1"
   - first_name: "Baishakhi"
     last_name: "Mallick"
     title: "Restoration Assistant"
     affiliation: "Victoria Memorial Hall"
+    sort_as: "2"
 keywords:
 abstract: "This case study discusses the extent of damage caused by termite attack on a large iconic oil painting: *The Delhi Durbar (1903)*, by Roderick Dempster MacKenzie (1865–1941) from the collection of Victoria Memorial Hall, Kolkata. The monumental painting (340 x 544 cm), is painted on a single piece of linen canvas. It had suffered structural damage in the past that was treated by adding strip-linings, patches, and local repairs for tears. These older, local repairs were failing, and furthermore, termite damage was also present along one vertical stretcher member. The tropical climatic zone of Kolkata places artworks at high risk of biodeterioration. It is impossible to fully prevent the development of termite colonies inside century-old buildings like Victoria Memorial Hall. The large scale of the painting and its condition presented a considerable conservation challenge. This poster presents step by step how the VMH conservation team repaired the damaged canvas with minimum interference."
 ---
