--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -9,26 +9,32 @@ contributor:
     last_name: "Carter"
     title: "Paintings Conservator"
     affiliation: "Queensland Art Gallery, Gallery of Modern Art, Brisbane, Australia"
+    sort_as: "1"
   - first_name: "Lynn"
     last_name: "Chua"
     title: "Conservation Scientist"
     affiliation: "Heritage Conservation Centre, National Heritage Board, Singapore"
+    sort_as: "2"
   - first_name: "Filzah"
     last_name: "Mohd Amir"
     title: "Assistant Conservator"
     affiliation: "Heritage Conservation Centre, National Heritage Board"
+    sort_as: "3"
   - first_name: "Ruby"
     last_name: "Awburn"
     title: "Independent Conservator"
     affiliation: "Australia"
+    sort_as: "4"
   - first_name: "Gillian"
     last_name: "Osmond"
     title: "Paintings Conservator"
     affiliation: "Queensland Art Gallery, Gallery of Modern Art"
+    sort_as: "5"
   - first_name: "Joey"
     last_name: "Ng"
     title:
     affiliation: "National University of Singapore"
+    sort_as: "6"
 keywords:
 abstract: "Contemporary painters often choose commercially primed canvases as their painting support; however, manufacturers provide little technical information about the materials used in their production. The authors were prompted to learn more about these materials’ manufacture after observing unexpected responses to established conservation treatments. Canvas fiber and priming binder, pigments, and fillers of fifty-three commercially primed canvases purchased from Australian and Singaporean suppliers were analyzed. The materials detected show variations in canvas types and priming formulations that suggest reasons for unusual conservation treatment characteristics."
 ---
