--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -10,22 +10,27 @@ contributor:
     last_name: "Tsuchiya"
     title: "Painting Conservator"
     affiliation: "Tokyo University of the Arts"
+    sort_as: "1"
   - first_name: "Eriko"
     last_name: "Hoshi"
     title: "Conservation Scientist"
     affiliation: "Joshibi University of Art and Design"
+    sort_as: "2"
   - first_name: "Hiroshi"
     last_name: "Haze"
     title: "Painting Conservator"
     affiliation: "Haze Painting Studio"
+    sort_as: "3"
   - first_name: "Marie"
     last_name: "Moto"
     title: "Paper Conservator"
     affiliation: "Japan Conservation Project"
+    sort_as: "4"
   - first_name: "Nobuyuki"
     last_name: "Kamba"
     title: "Conservation Scientist"
     affiliation: "Tokyo National Museum"
+    sort_as: "5"
 keywords:
 abstract: "A large number of cultural properties were damaged in the March 2011 tsunami that devastated Japan’s Tohoku region. A problem arises when we are faced with removing salt matter from paintings: salts absorb moisture from the atmosphere, and that moisture can promote deformation of the support. The Tokyo National Museum began in 2011 to research methods for removal of salt matter from paintings on canvas. Through a number of experiments, methods of desalination were developed for acrylic paintings on cotton canvas. In one method, the canvas was temporarily removed from its original wooden frame, edge-lined with polyester cloth, and then stretched on a temporary frame. Water was sprayed on the reverse and moisture absorbed with blotting paper. Experiments that followed confirmed that the amount of moisture and the period of immersion influenced the removal of remaining salts. Using techniques from paper conservation, moistened blotting paper was used as compress, and water containing dissolved salts was removed as quickly as possible using polymer sheet. This process was repeated several times for desalination. As a result, it was possible to control the contraction of the canvas to about 0.3%, and the chloride concentration was reduced to about what is contained in tap water in Tokyo."
 ---
