--- a/content/3-open-questions/17.md
+++ b/content/3-open-questions/17.md
@@ -10,30 +10,37 @@ contributor:
     last_name: "Kerr"
     title: "Head of Conservation and Senior Paintings Conservator"
     affiliation: "Smithsonian American Art Museum"
+    sort_as: "1"
   - first_name: "Gwen"
     last_name: "Manthey"
     title: "Paintings Conservator"
     affiliation: "Smithsonian American Art Museum"
+    sort_as: "2"
   - first_name: "Keara"
     last_name: "Teeter"
     title: "Postgraduate Fellow"
     affiliation: "Smithsonian American Art Museum"
+    sort_as: "3"
   - first_name: "Kristin"
     last_name: "DeGhetaldi"
     title: "Paintings Conservator"
     affiliation: "Independent Researcher"
+    sort_as: "4"
   - first_name: "Brian"
     last_name: "Baade"
     title: "Paintings Conservator and Associate Professor"
     affiliation: "University of Delaware"
+    sort_as: "5"
   - first_name: "W. Christian"
     last_name: "Petersen"
     title: "Volunteer Conservation Scientist and Affiliated Associate Professor"
     affiliation: "Winterthur Museum"
+    sort_as: "6"
   - first_name: "Catherine"
     last_name: "Matsen"
     title: "Scientist and Affiliated Associate Professor"
     affiliation: "Winterthur Museum"
+    sort_as: "7"
 abstract: "Paintings conservators at the Smithsonian American Art Museum survey conservation records to gather the historical recipes, treatment protocols, and materials used over the past fifty years to build a reference database connected to specific works in the collection. From this information, the authors show how the database is being used to recreate both historic wax-resin recipes and application techniques through lining mock-ups. This material reference set is being used for analytical and physical testing to learn more about the materials used and how they degrade and what influences mechanical as well as environmental conditions have on both the lining recipes and reconstructions as they age."
 ---
 
